build UI for adding story

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hack or Snooze</title>
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/user.css">
@@ -33,13 +33,35 @@
 <nav>
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+    <a class="nav-link" id="submit-story-form" href="#"><small>Submit</small></a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
     <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
+
   </div>
 </nav>
+
+<!-- Add new story form -->
+<section class="container">
+  <form id="add-story-form" class="form hidden">
+    <h4>Add New Story</h4>
+    <div class="story-input">
+      <label for="story-title">Title</label>
+      <input id="story-title" autocapitalize="words">
+    </div>
+    <div class="story-input">
+      <label for="story-author">Author</label>
+      <input id="story-author" autocapitalize="words">
+    </div>
+    <div class="story-input">
+      <label for="story-url">URL</label>
+      <input id="story-url">
+    </div>
+    <button type="submit" id="submit-story">Submit</button>
+  </form>
+</section>
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
