add functionality for favorite button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <label for="story-url">URL</label>
       <input id="story-url">
     </div>
-    <input type="submit" id="submit-story">Submit</input>
+    <input type="submit" id="submit-story"></input>
   </form>
 </section>
 
